--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,18 @@
+server:
+  port: 8080
+
 spring:
   application:
     name: splearn
+    
+  datasource:
+    url: jdbc:mysql://localhost:3406/splearn
+    username: spring
+    password: secret
+    driver-class-name: com.mysql.cj.jdbc.Driver
     
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
+    database-platform: org.hibernate.dialect.MySQLDialect
