--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,9 @@
-server:
-  port: 8080
-
 spring:
-  application:
-    name: splearn
-    
-  datasource:
-    url: jdbc:mysql://localhost:3406/splearn
-    username: spring
-    password: secret
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    
+  application.name: splearn
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
-    database-platform: org.hibernate.dialect.MySQLDialect
+        ddl-auto: update
+  docker:
+    compose:
+      lifecycle-management: start_only
